WIP
* enable URLs and directories as network input
* adds generic isotropic network
* demo plugins now call the generic plugins instead of extending it